--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "description": "We.js core plugin",
   "version": "0.0.3",
   "dependencies": {
+    "async": "^0.9.0",
     "include-all": "^0.1.6",
     "lodash": "^2.4.1",
     "mkdirp": "^0.5.0",
     "node-uuid": "^1.4.1",
     "sanitize-html": "^1.4.2",
     "string": "^2.1.0",
+    "twitter-text": "^1.9.4",
     "we-helpers": "0.0.5",
     "we-send-email": "0.0.4",
     "we-theme-engine": "0.0.10"
