--- a/package.json
+++ b/package.json
@@ -2,8 +2,15 @@
   "name": "we-plugin-core",
   "description": "We.js core plugin",
   "version": "0.0.5",
+  "keywords": [
+    "we.js",
+    "wejs",
+    "plugin",
+    "sails.js"
+  ],
   "dependencies": {
     "async": "^0.9.0",
+    "ejs": "^1.0.0",
     "include-all": "^0.1.6",
     "lodash": "^2.4.1",
     "mkdirp": "^0.5.0",
