--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^2.4.1",
     "mkdirp": "^0.5.0",
     "node-uuid": "^1.4.1",
+    "sails-emberjs-model-converter": "0.0.2",
     "sanitize-html": "^1.4.2",
     "string": "^2.1.0",
     "we-helpers": "0.0.7",
