--- a/.jshintrc
+++ b/.jshintrc
@@ -5,7 +5,7 @@
 , "curly": false
 , "devel": false
 , "devel": true
-, "eqeqeq": true
+, "eqeqeq": false
 , "eqnull": true
 , "es5": false
 , "evil": false
@@ -15,7 +15,7 @@
 , "latedef": false
 , "laxbreak": true
 , "laxcomma": true
-, "maxcomplexity": 6
+, "maxcomplexity": 10
 , "maxdepth": 4
 , "maxstatements": 25
 , "maxlen": 120
@@ -35,6 +35,7 @@
   , "Ember"
   , "App"
   , "DS"
+  , "Permissions"
   ]
 , "smarttabs": true
 , "strict": false
