--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "mkdirp": "^0.5.0",
     "node-uuid": "^1.4.1",
     "sails-emberjs-model-converter": "0.1.0",
-    "sanitize-html": "^1.4.2",
+    "sanitize-html": "^1.5.2",
     "string": "^2.1.0",
-    "we-helpers": "0.0.7",
+    "we-helpers": ">=0.0.7",
     "we-theme-engine": "0.0.15"
   },
   "main": "lib/index.js",
