--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "bcrypt": "^0.8.1",
     "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
@@ -16,6 +17,7 @@
     "lodash": "^3.3.1",
     "mkdirp": "^0.5.0",
     "morgan": "~1.5.1",
+    "multer": "^0.1.8",
     "mysql": "^2.5.5",
     "rc": "^0.6.0",
     "require-all": "^1.0.0",
