--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "async": "^0.9.0",
     "bcrypt": "^0.8.1",
     "body-parser": "~1.12.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.0",
-    "hbs": "~2.8.0",
+    "express-session": "^1.10.3",
+    "handlebars": "^3.0.0",
     "less-middleware": "1.0.x",
     "lodash": "^3.3.1",
     "mkdirp": "^0.5.0",
     "morgan": "~1.5.1",
     "multer": "^0.1.8",
     "mysql": "^2.5.5",
+    "passport": "^0.2.1",
+    "passport-facebook": "^1.0.3",
+    "passport-google": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "passport-oauth": "^1.0.0",
     "rc": "^0.6.0",
     "require-all": "^1.0.0",
     "sequelize": "^2.0.3",
