--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
     "debug": "~2.1.1",
     "express": "~4.12.0",
     "express-session": "^1.10.3",
+    "gm": "^1.17.0",
     "grunt-cli": "^0.1.13",
     "handlebars": "^3.0.0",
     "hbs": "^2.8.0",
     "less-middleware": "1.0.x",
     "lodash": "^3.3.1",
+    "mime": "^1.3.4",
     "mkdirp": "^0.5.0",
     "morgan": "~1.5.1",
     "multer": "^0.1.8",
+    "mv": "^2.0.3",
     "mysql": "^2.5.5",
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
@@ -51,6 +54,9 @@
     "winston": "^0.9.0"
   },
   "devDependencies": {
-    "mocha": "^2.1.0"
+    "mocha": "^2.1.0",
+    "supertest": "^0.15.0",
+    "we-theme-admin-default": "^0.0.5",
+    "we-theme-site-wejs": "^0.0.4"
   }
 }
