--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "winston": "^0.9.0"
   },
   "devDependencies": {
+    "chance": "^0.7.3",
     "grunt-cli": "^0.1.13",
     "mocha": "^2.1.0",
     "supertest": "^0.15.0",
