--- a/package.json
+++ b/package.json
@@ -40,12 +40,16 @@
     "mv": "^2.0.3",
     "mysql": "^2.5.5",
     "node-uuid": "^1.4.3",
+    "nodemailer": "^1.3.2",
+    "nodemailer-smtp-transport": "^1.0.2",
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
     "passport-google": "^0.3.0",
+    "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
     "passport-oauth": "^1.0.0",
     "rc": "^0.6.0",
+    "request": "^2.53.0",
     "require-all": "^1.0.0",
     "rimraf": "^2.3.1",
     "sanitize-html": "^1.6.1",
@@ -53,8 +57,8 @@
     "serve-favicon": "~2.2.0",
     "sqlite3": "^3.0.5",
     "we-class-theme": "0.0.4",
-    "winston": "^0.9.0",
-    "we-core": "wejs/we-core"
+    "we-core": "wejs/we-core",
+    "winston": "^0.9.0"
   },
   "devDependencies": {
     "chance": "^0.7.3",
