--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "passport": "^0.2.1",
     "passport-facebook": "^1.0.3",
     "passport-google": "^0.3.0",
-    "we-passport-http-bearer": "wejs/we-passport-http-bearer",
     "passport-local": "^1.0.0",
     "passport-oauth": "^1.0.0",
     "rc": "^0.6.0",
@@ -56,8 +55,10 @@
     "sequelize": "^2.0.3",
     "serve-favicon": "~2.2.0",
     "sqlite3": "^3.0.5",
+    "string": "^3.1.0",
     "we-class-theme": "0.0.4",
     "we-core": "wejs/we-core",
+    "we-passport-http-bearer": "wejs/we-passport-http-bearer",
     "winston": "^0.9.0"
   },
   "devDependencies": {
