--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "~1.12.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.4",
+    "cors": "^2.5.3",
     "debug": "~2.1.1",
     "email-templates": "^1.2.1",
     "express": "~4.12.0",
