--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: false
+sudo: required
 
 language: node_js
 
@@ -11,8 +11,8 @@ services:
   - mysql
 
 env:
-  CODECLIMATE_REPO_TOKEN: '8d07bda4536211d4af2ef9dce3edda45dff1f892a2abdb062ab1c2ffd0a637f2'
-  NODE_ENV: 'test'
+  - CODECLIMATE_REPO_TOKEN: '8d07bda4536211d4af2ef9dce3edda45dff1f892a2abdb062ab1c2ffd0a637f2'
+  - NODE_ENV: 'test'
 
 before_script:
   - sudo apt-get install graphicsmagick
