--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "require-all": "^1.0.0",
     "rimraf": "^2.3.1",
     "sanitize-html": "^1.6.1",
-    "sequelize": "^2.0.3",
+    "sequelize": "2.0.6",
     "serve-favicon": "~2.2.0",
     "socket.io": "^1.3.5",
     "string": "^3.1.0",
