--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "async": "^0.9.0",
     "bcrypt": "^0.8.1",
     "body-parser": "~1.12.0",
+    "compression": "^1.4.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.4",
     "cors": "^2.5.3",
