--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "debug": "~2.1.1",
     "email-templates": "^1.2.1",
     "express": "~4.12.0",
+    "express-mysql-session": "^0.3.3",
     "express-session": "^1.10.3",
     "fs-extra": "^0.18.0",
     "gm": "^1.17.0",
@@ -61,7 +62,7 @@
     "socket.io": "^1.3.5",
     "string": "^3.1.0",
     "we-passport-http-bearer": "0.3.0",
-    "winston": "^0.9.0"
+    "winston": "1.0.0"
   },
   "devDependencies": {
     "chance": "^0.7.3",
