--- a/.jscsrc
+++ b/.jscsrc
@@ -2,6 +2,9 @@
   [ "**/node_modules/**"
   , "coverage"
   , "data"
+  , "client/shared/beforeAll/**"
+  , "client/shared/libs/**"
+  , "files/public/**"
   ]
 , "requireLineFeedAtFileEnd": true
 , "disallowMultipleLineBreaks": true
