update tests to move helpers and stubs to we-test-tools

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "we-core",
-  "version": "0.3.16",
+  "version": "0.3.17",
   "main": "./lib/index.js",
   "scripts": {
     "lint": "./node_modules/.bin/jshint .",
@@ -66,13 +66,13 @@
     "winston": "1.0.0"
   },
   "devDependencies": {
-    "chance": "^0.7.3",
     "grunt-cli": "^0.1.13",
     "jshint": "^2.7.0",
     "mocha": "^2.1.0",
     "sinon": "^1.14.0",
     "supertest": "^0.15.0",
     "we-theme-admin-default": "0.3.0",
-    "we-theme-site-wejs": "0.3.0"
+    "we-theme-site-wejs": "0.3.0",
+    "we-test-tools": "^0.3.0"
   }
 }
