--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "we-core",
-  "version": "0.3.23",
+  "version": "0.3.24",
   "main": "./lib/index.js",
   "scripts": {
     "lint": "./node_modules/.bin/jshint .",
@@ -71,8 +71,8 @@
     "mocha": "^2.2.5",
     "sinon": "^1.14.0",
     "supertest": "^1.0.1",
-    "we-theme-admin-default": "0.3.1",
-    "we-theme-site-wejs": "0.3.9",
-    "we-test-tools": "^0.3.2"
+    "we-test-tools": "^0.3.2",
+    "we-theme-admin-default": "^0.3.1",
+    "we-theme-site-wejs": "^0.3.10"
   }
 }
