--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "registry": "http://registry.npmjs.org"
   },
   "author": "Alberto Souza <alberto.souza.dev@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "async": "^1.0.0",
+    "async": "^1.2.0",
     "bcrypt": "^0.8.3",
     "body-parser": "~1.12.4",
     "compression": "^1.4.4",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
-    "cors": "^2.6.0",
+    "cors": "^2.7.1",
     "debug": "~2.2.0",
     "email-templates": "^1.2.1",
     "express": "~4.12.4",
@@ -38,13 +38,13 @@
     "handlebars": "^3.0.3",
     "hbs": "^3.0.1",
     "i18n": "^0.5.0",
-    "lodash": "^3.9.2",
+    "lodash": "^3.9.3",
     "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
     "morgan": "~1.5.3",
     "multer": "^0.1.8",
     "mv": "^2.0.3",
-    "mysql": "^2.5.5",
+    "mysql": "^2.7.0",
     "node-uuid": "^1.4.3",
     "nodemailer": "^1.3.2",
     "nodemailer-smtp-transport": "^1.0.3",
@@ -54,20 +54,19 @@
     "passport-local": "^1.0.0",
     "passport-oauth": "^1.0.0",
     "rc": "^1.0.3",
-    "request": "^2.53.0",
+    "request": "^2.57.0",
     "require-all": "^1.1.0",
     "rimraf": "^2.3.4",
-    "sanitize-html": "^1.6.1",
-    "sequelize": "3.1.0",
+    "sanitize-html": "^1.7.0",
+    "sequelize": "3.1.1",
     "serve-favicon": "~2.2.1",
     "socket.io": "^1.3.5",
-    "string": "^3.1.0",
+    "string": "^3.2.0",
     "we-passport-http-bearer": "0.3.0",
     "winston": "1.0.0"
   },
   "devDependencies": {
-    "grunt-cli": "^0.1.13",
-    "jshint": "^2.7.0",
+    "jshint": "^2.8.0",
     "mocha": "^2.2.5",
     "sinon": "^1.14.0",
     "supertest": "^1.0.1",
