--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "express-mysql-session": "^0.4.0",
     "express-session": "^1.11.2",
     "fs-extra": "^0.18.4",
-    "gm": "^1.18.1",
     "handlebars": "^3.0.3",
     "hbs": "^3.0.1",
     "i18n": "^0.5.0",
@@ -53,6 +52,7 @@
     "passport-google": "^0.3.0",
     "passport-local": "^1.0.0",
     "passport-oauth": "^1.0.0",
+    "path-to-regexp": "^1.2.0",
     "rc": "^1.0.3",
     "request": "^2.57.0",
     "require-all": "^1.1.0",
