update widget feature and update tests

--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
     "mocha": "^2.2.5",
     "sinon": "^1.14.0",
     "supertest": "^1.0.1",
+    "we-core": "^0.3.30",
+    "we-plugin-form": "^0.3.1",
     "we-test-tools": "^0.3.4",
     "we-theme-admin-default": "^0.3.2",
     "we-theme-site-wejs": "^0.3.12"
