--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lodash": "^3.9.3",
     "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
+    "moment": "^2.10.3",
     "morgan": "~1.5.3",
     "multer": "^0.1.8",
     "mv": "^2.0.3",
