--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "we-core",
-  "version": "0.3.41",
+  "version": "0.3.42",
   "main": "./lib/index.js",
   "scripts": {
     "lint": "./node_modules/.bin/jshint .",
@@ -70,7 +70,7 @@
     "mocha": "^2.2.5",
     "sinon": "^1.14.0",
     "supertest": "^1.0.1",
-    "we-plugin-form": "^0.3.1",
+    "we-plugin-form": "wejs/we-plugin-form",
     "we-test-tools": "^0.3.5",
     "we-theme-admin-default": "^0.3.2",
     "we-theme-site-wejs": "^0.3.12"
