--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "sinon": "^1.14.0",
     "supertest": "^1.0.1",
     "we-plugin-form": "wejs/we-plugin-form",
-    "we-test-tools": "^0.3.5",
+    "we-test-tools": "wejs/we-test-tools",
     "we-theme-admin-default": "^0.3.2",
     "we-theme-site-wejs": "^0.3.12"
   }
