--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "^1.2.0",
-    "bcrypt": "^0.8.3",
+    "bcrypt": "0.8.3",
     "body-parser": "~1.13.3",
     "compression": "^1.4.4",
     "connect-flash": "^0.1.1",
@@ -60,7 +60,7 @@
     "sanitize-html": "^1.7.0",
     "sequelize": "3.2.0",
     "serve-favicon": "~2.3.0",
-    "socket.io": "^1.3.5",
+    "socket.io": "1.3.5",
     "string": "^3.2.0",
     "winston": "1.0.1"
   },
