--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-sudo: required
-
 language: node_js
 
 node_js:
@@ -11,19 +9,17 @@ services:
 addons:
   code_climate:
     repo_token: '8d07bda4536211d4af2ef9dce3edda45dff1f892a2abdb062ab1c2ffd0a637f2'
-
+  apt:
+    packages:
+    - graphicsmagick
 env:
   NODE_ENV: 'test'
 
 before_script:
-  - sudo apt-get install graphicsmagick
   - mysql -e 'create database test;'
-  - npm install -g istanbul
-  - npm install -g mocha
-  - npm install -g codeclimate-test-reporter
 
 after_success:
-  - NODE_ENV=test LOG_LV=info istanbul cover _mocha -- -R spec test/bootstrap.js test/**/*.test.js --timeout 20000
+  - NODE_ENV=test LOG_LV=info node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -u exports -R spec test/bootstrap.js test/**/*.test.js --timeout 2000
   - codeclimate-test-reporter < lcov.info
 
 notifications:
