--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "^1.2.0",
-    "bcrypt": "0.8.3",
+    "bcryptjs": "^2.2.2",
     "body-parser": "~1.13.3",
     "compression": "^1.4.4",
     "connect-flash": "^0.1.1",
