--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "handlebars": "^3.0.3",
     "hbs": "^3.0.1",
     "i18n": "^0.5.0",
+    "install": "^0.1.8",
     "lodash": "^3.9.3",
     "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
@@ -50,6 +51,7 @@
     "node-uuid": "^1.4.3",
     "nodemailer": "^1.3.2",
     "nodemailer-smtp-transport": "^1.0.3",
+    "npm": "^3.3.6",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "path-to-regexp": "^1.2.0",
@@ -62,6 +64,7 @@
     "sequelize": "3.2.0",
     "serve-favicon": "~2.3.0",
     "string": "^3.2.0",
+    "string.prototype.endswith": "^0.2.0",
     "winston": "1.0.1"
   },
   "devDependencies": {
