--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_script:
   - mysql -e 'create database test;'
 
 after_success:
+  - npm install codeclimate-test-reporter
   - NODE_ENV=test LOG_LV=info node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -u exports -R spec test/bootstrap.js test/**/*.test.js --timeout 20000
   - codeclimate-test-reporter < coverage/lcov.info
 
