--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "cookie-parser": "~1.3.5",
     "cors": "^2.7.1",
     "debug": "~2.2.0",
-    "email-templates": "^1.2.1",
+    "email-templates": "2.0.1",
     "express": "~4.13.3",
     "express-mysql-session": "^0.4.0",
     "express-session": "^1.11.2",
