--- a/package.json
+++ b/package.json
@@ -23,23 +23,22 @@
   "author": "Alberto Souza <alberto.souza.dev@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "async": "^1.2.0",
+    "async": "^1.5.0",
     "bcryptjs": "^2.3.0",
-    "body-parser": "~1.13.3",
-    "compression": "^1.4.4",
+    "body-parser": "^1.14.1",
+    "compression": "^1.4.0",
     "connect-flash": "^0.1.1",
-    "cookie-parser": "~1.3.5",
+    "cookie-parser": "^1.4.0",
     "cors": "^2.7.1",
     "debug": "~2.2.0",
     "email-templates": "2.0.1",
     "express": "~4.13.3",
-    "express-mysql-session": "^0.4.0",
-    "express-session": "^1.11.2",
-    "fs-extra": "^0.22.1",
-    "handlebars": "^3.0.3",
-    "hbs": "^3.0.1",
+    "express-mysql-session": "^0.4.3",
+    "express-session": "^1.12.1",
+    "fs-extra": "^0.26.2",
+    "handlebars": "^4.0.4",
+    "hbs": "^4.0.0",
     "i18n": "^0.5.0",
-    "install": "^0.1.8",
     "lodash": "^3.9.3",
     "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
@@ -48,34 +47,33 @@
     "multer": "^0.1.8",
     "mv": "^2.0.3",
     "mysql": "^2.7.0",
-    "node-uuid": "^1.4.3",
-    "nodemailer": "^1.3.2",
-    "nodemailer-smtp-transport": "^1.0.3",
-    "npm": "^3.3.6",
-    "passport": "^0.3.0",
+    "node-uuid": "^1.4.7",
+    "nodemailer": "^1.10.0",
+    "nodemailer-smtp-transport": "^1.0.4",
+    "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "path-to-regexp": "^1.2.0",
-    "rc": "^1.0.3",
-    "recursive-readdir": "^1.2.1",
+    "rc": "^1.1.5",
+    "recursive-readdir": "^1.3.0",
     "request": "^2.57.0",
-    "require-all": "^1.1.0",
+    "require-all": "^2.0.0",
     "rimraf": "^2.3.4",
-    "sanitize-html": "^1.7.0",
-    "sequelize": "3.2.0",
+    "sanitize-html": "^1.11.1",
+    "sequelize": "^3.13.0",
     "serve-favicon": "~2.3.0",
     "string": "^3.2.0",
     "string.prototype.endswith": "^0.2.0",
-    "winston": "1.0.1"
+    "winston": "2.1.0"
   },
   "devDependencies": {
-    "istanbul": "^0.3.20",
+    "istanbul": "^0.4.0",
     "jshint": "^2.8.0",
-    "mocha": "^2.2.5",
-    "sinon": "^1.14.0",
+    "mocha": "^2.3.4",
+    "sinon": "^1.17.2",
     "supertest": "^1.0.1",
-    "we-plugin-form": "^0.3.18",
+    "we-plugin-form": "^0.3.23",
     "we-test-tools": "^0.3.7",
-    "we-theme-admin-default": "wejs/we-theme-admin-default",
-    "we-theme-site-wejs": "wejs/we-theme-site-wejs"
+    "we-theme-admin-default": "^0.3.10",
+    "we-theme-site-wejs": "^0.3.30"
   }
 }
