--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "express-mysql-session": "^0.4.3",
     "express-session": "^1.12.1",
     "fs-extra": "^0.26.2",
-    "handlebars": "^4.0.4",
+    "handlebars": "^4.0.5",
     "hbs": "^4.0.0",
     "i18n": "^0.5.0",
     "lodash": "^3.9.3",
@@ -58,22 +58,22 @@
     "path-to-regexp": "^1.2.0",
     "rc": "^1.1.5",
     "recursive-readdir": "^1.3.0",
-    "request": "^2.57.0",
+    "request": "^2.67.0",
     "require-all": "^2.0.0",
-    "rimraf": "^2.3.4",
-    "sanitize-html": "^1.11.1",
-    "sequelize": "^3.13.0",
+    "rimraf": "^2.4.4",
+    "sanitize-html": "^1.11.2",
+    "sequelize": "^3.14.2",
     "serve-favicon": "~2.3.0",
     "string": "^3.2.0",
     "string.prototype.endswith": "^0.2.0",
-    "winston": "2.1.0"
+    "winston": "^2.1.1"
   },
   "devDependencies": {
-    "istanbul": "^0.4.0",
+    "istanbul": "^0.4.1",
     "mocha": "^2.3.4",
     "sinon": "^1.17.2",
     "supertest": "^1.0.1",
-    "we-plugin-form": "^0.3.23",
+    "we-plugin-form": "^0.3.24",
     "we-test-tools": "^0.3.10",
     "we-theme-admin-default": "^0.3.10",
     "we-theme-site-wejs": "^0.3.30"
