--- a/package.json
+++ b/package.json
@@ -26,56 +26,56 @@
   "author": "Alberto Souza <alberto.souza.dev@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "async": "^1.5.0",
+    "async": "^1.5.2",
     "bcryptjs": "^2.3.0",
-    "body-parser": "^1.14.1",
+    "body-parser": "^1.14.2",
     "compression": "^1.4.0",
     "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.0",
+    "cookie-parser": "^1.4.1",
     "cors": "^2.7.1",
     "debug": "~2.2.0",
     "email-templates": "2.0.1",
     "express": "~4.13.3",
-    "express-mysql-session": "^0.4.3",
-    "express-session": "^1.12.1",
-    "fs-extra": "^0.26.2",
+    "express-mysql-session": "^0.4.4",
+    "express-session": "^1.13.0",
+    "fs-extra": "^0.26.4",
     "handlebars": "^4.0.5",
     "hbs": "^4.0.0",
     "i18n": "^0.5.0",
-    "lodash": "^3.9.3",
+    "lodash": "3.10.1",
     "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
-    "moment": "^2.10.3",
+    "moment": "^2.11.1",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
     "mv": "^2.0.3",
-    "mysql": "^2.7.0",
+    "mysql": "^2.10.2",
     "node-uuid": "^1.4.7",
-    "nodemailer": "^1.10.0",
-    "nodemailer-smtp-transport": "^1.0.4",
+    "nodemailer": "^2.0.0",
+    "nodemailer-smtp-transport": "^2.0.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "path-to-regexp": "^1.2.0",
-    "rc": "^1.1.5",
+    "rc": "^1.1.6",
     "recursive-readdir": "^1.3.0",
     "request": "^2.67.0",
     "require-all": "^2.0.0",
-    "rimraf": "^2.4.4",
-    "sanitize-html": "^1.11.2",
-    "sequelize": "^3.14.2",
+    "rimraf": "^2.5.0",
+    "sanitize-html": "^1.11.3",
+    "sequelize": "^3.17.3",
     "serve-favicon": "~2.3.0",
     "string": "^3.2.0",
     "string.prototype.endswith": "^0.2.0",
     "winston": "^2.1.1"
   },
   "devDependencies": {
-    "istanbul": "^0.4.1",
+    "istanbul": "^0.4.2",
     "mocha": "^2.3.4",
     "sinon": "^1.17.2",
     "supertest": "^1.0.1",
-    "we-plugin-form": "^0.3.24",
-    "we-test-tools": "^0.3.10",
-    "we-theme-admin-default": "^0.3.10",
-    "we-theme-site-wejs": "^0.3.30"
+    "we-plugin-form": "^0.3.27",
+    "we-test-tools": "^0.3.11",
+    "we-theme-admin-default": "^0.3.12",
+    "we-theme-site-wejs": "^0.3.31"
   }
 }
