--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "we-core",
   "version": "0.3.117",
+  "description": "We.js is a node.js framework for build real time applications, sites or blogs!",
   "main": "./lib/index.js",
   "scripts": {
     "test": "NODE_ENV=test LOG_LV=info ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js -b ",
@@ -29,19 +30,19 @@
     "async": "^1.5.2",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.14.2",
-    "compression": "^1.4.0",
+    "compression": "^1.6.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.1",
     "cors": "^2.7.1",
     "debug": "~2.2.0",
-    "email-templates": "2.0.1",
-    "express": "~4.13.3",
+    "email-templates": "^2.1.0",
+    "express": "^4.13.4",
     "express-mysql-session": "^0.4.4",
     "express-session": "^1.13.0",
-    "fs-extra": "^0.26.4",
+    "fs-extra": "^0.26.5",
     "handlebars": "^4.0.5",
     "hbs": "^4.0.0",
-    "i18n": "^0.5.0",
+    "i18n": "^0.6.0",
     "lodash": "3.10.1",
     "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
@@ -58,11 +59,11 @@
     "path-to-regexp": "^1.2.0",
     "rc": "^1.1.6",
     "recursive-readdir": "^1.3.0",
-    "request": "^2.67.0",
+    "request": "^2.69.0",
     "require-all": "^2.0.0",
-    "rimraf": "^2.5.0",
+    "rimraf": "^2.5.1",
     "sanitize-html": "^1.11.3",
-    "sequelize": "^3.17.3",
+    "sequelize": "^3.18.0",
     "serve-favicon": "~2.3.0",
     "string": "^3.2.0",
     "string.prototype.endswith": "^0.2.0",
@@ -70,8 +71,8 @@
   },
   "devDependencies": {
     "istanbul": "^0.4.2",
-    "mocha": "^2.3.4",
-    "sinon": "^1.17.2",
+    "mocha": "^2.4.5",
+    "sinon": "^1.17.3",
     "supertest": "^1.0.1",
     "we-plugin-form": "^0.3.27",
     "we-test-tools": "^0.3.11",
