--- a/package.json
+++ b/package.json
@@ -37,20 +37,18 @@
     "debug": "~2.2.0",
     "email-templates": "^2.1.0",
     "express": "^4.13.4",
-    "express-mysql-session": "^0.4.4",
     "express-session": "^1.13.0",
     "fs-extra": "^0.26.5",
     "handlebars": "^4.0.5",
     "hbs": "^4.0.0",
-    "i18n": "^0.6.0",
+    "i18n": "^0.8.0",
     "lodash": "3.10.1",
     "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
     "moment": "^2.11.2",
-    "morgan": "~1.6.1",
+    "morgan": "^1.7.0",
     "multer": "^1.1.0",
     "mv": "^2.0.3",
-    "mysql": "^2.10.2",
     "node-uuid": "^1.4.7",
     "nodemailer": "^2.0.0",
     "nodemailer-smtp-transport": "^2.0.0",
@@ -77,7 +75,9 @@
     "we-plugin-form": "^0.3.27",
     "we-plugin-menu": "^0.3.15",
     "we-test-tools": "^0.3.11",
-    "we-theme-admin-default": "^0.3.12",
-    "we-theme-site-wejs": "^0.3.31"
+    "we-theme-admin-default": "^1.0.0",
+    "we-theme-site-wejs": "^0.3.31",
+    "express-mysql-session": "1.0.0-rc.0",
+    "mysql": "^2.10.2"
   }
 }
