--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "we-core",
-  "version": "0.3.122",
+  "version": "0.3.123-0",
   "description": "We.js is a node.js framework for build real time applications, sites or blogs!",
   "main": "./lib/index.js",
   "scripts": {
