change we.js hooks feature to simple-hooks-callback

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "sanitize-html": "^1.11.3",
     "sequelize": "^3.19.2",
     "serve-favicon": "~2.3.0",
+    "simple-hooks-callback": "^1.0.0",
     "string": "^3.2.0",
     "string.prototype.endswith": "^0.2.0",
     "winston": "^2.1.1"
