change author email

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "publishConfig": {
     "registry": "http://registry.npmjs.org"
   },
-  "author": "Alberto Souza <alberto.souza.dev@gmail.com>",
+  "author": "Alberto Souza <contato@albertosouza.net>",
   "license": "MIT",
   "dependencies": {
     "async": "^1.5.2",
