--- a/package.json
+++ b/package.json
@@ -28,57 +28,57 @@
   "author": "Alberto Souza <contato@albertosouza.net>",
   "license": "MIT",
   "dependencies": {
-    "async": "^1.5.2",
+    "async": "^2.0.0-rc.3",
     "bcryptjs": "^2.3.0",
-    "body-parser": "^1.14.2",
+    "body-parser": "^1.15.0",
     "compression": "^1.6.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.1",
     "cors": "^2.7.1",
     "debug": "~2.2.0",
-    "email-templates": "^2.1.0",
+    "email-templates": "^2.3.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
-    "fs-extra": "^0.26.5",
+    "fs-extra": "^0.27.0",
     "handlebars": "^4.0.5",
     "hbs": "^4.0.0",
-    "i18n": "^0.8.0",
-    "lodash": "3.10.1",
+    "i18n": "^0.8.1",
+    "lodash": "4.11.1",
     "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
-    "moment": "^2.11.2",
+    "moment": "^2.12.0",
     "morgan": "^1.7.0",
     "multer": "^1.1.0",
-    "mv": "^2.0.3",
+    "mv": "^2.1.1",
     "node-uuid": "^1.4.7",
-    "nodemailer": "^2.0.0",
-    "nodemailer-smtp-transport": "^2.0.0",
+    "nodemailer": "^2.3.2",
+    "nodemailer-smtp-transport": "^2.4.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "path-to-regexp": "^1.2.0",
+    "path-to-regexp": "^1.2.1",
     "rc": "^1.1.6",
-    "recursive-readdir": "^1.3.0",
-    "request": "^2.69.0",
+    "recursive-readdir": "^2.0.0",
+    "request": "^2.71.0",
     "require-all": "^2.0.0",
-    "rimraf": "^2.5.1",
-    "sanitize-html": "^1.11.3",
-    "sequelize": "^3.19.2",
+    "rimraf": "^2.5.2",
+    "sanitize-html": "^1.11.4",
+    "sequelize": "^3.21.0",
     "serve-favicon": "~2.3.0",
     "simple-hooks-callback": "^1.0.0",
-    "string": "^3.2.0",
+    "string": "^3.3.1",
     "string.prototype.endswith": "^0.2.0",
-    "winston": "^2.1.1",
-    "we-core-acl": "^1.0.2"
+    "winston": "^2.2.0",
+    "we-core-acl": "^1.2.0"
   },
   "devDependencies": {
-    "istanbul": "^0.4.2",
+    "istanbul": "^0.4.3",
     "mocha": "^2.4.5",
     "sinon": "^1.17.3",
-    "supertest": "^1.0.1",
-    "we-plugin-form": "^0.3.27",
-    "we-plugin-menu": "^0.3.15",
-    "we-test-tools": "^0.3.11",
-    "we-theme-admin-default": "^1.0.0",
+    "supertest": "^1.2.0",
+    "we-plugin-form": "^0.3.31",
+    "we-plugin-menu": "^1.1.0",
+    "we-test-tools": "^0.3.12",
+    "we-theme-admin-default": "^1.0.1",
     "we-theme-site-wejs": "^0.3.31",
     "express-mysql-session": "1.0.0-rc.0",
     "mysql": "^2.10.2"
