--- a/package.json
+++ b/package.json
@@ -39,14 +39,14 @@
     "email-templates": "^2.3.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
-    "fs-extra": "^0.27.0",
+    "fs-extra": "^0.29.0",
     "handlebars": "^4.0.5",
     "hbs": "^4.0.0",
-    "i18n": "^0.8.1",
+    "i18n": "^0.8.2",
     "lodash": "4.11.1",
     "mime": "^1.3.4",
     "mkdirp": "^0.5.1",
-    "moment": "^2.12.0",
+    "moment": "^2.13.0",
     "morgan": "^1.7.0",
     "multer": "^1.1.0",
     "mv": "^2.1.1",
@@ -58,11 +58,11 @@
     "path-to-regexp": "^1.2.1",
     "rc": "^1.1.6",
     "recursive-readdir": "^2.0.0",
-    "request": "^2.71.0",
+    "request": "^2.72.0",
     "require-all": "^2.0.0",
     "rimraf": "^2.5.2",
     "sanitize-html": "^1.11.4",
-    "sequelize": "^3.21.0",
+    "sequelize": "^3.22.0",
     "serve-favicon": "~2.3.0",
     "simple-hooks-callback": "^1.0.0",
     "string": "^3.3.1",
@@ -75,12 +75,12 @@
     "mocha": "^2.4.5",
     "sinon": "^1.17.3",
     "supertest": "^1.2.0",
-    "we-plugin-form": "^0.3.31",
-    "we-plugin-menu": "^1.1.0",
-    "we-test-tools": "^0.3.12",
+    "we-plugin-form": "^0.3.34",
+    "we-plugin-menu": "^1.1.1",
+    "we-test-tools": "^0.3.14",
     "we-theme-admin-default": "^1.0.1",
     "we-theme-site-wejs": "^0.3.31",
-    "express-mysql-session": "1.0.0-rc.0",
+    "express-mysql-session": "1.0.0",
     "mysql": "^2.10.2"
   }
 }
