update npm modules and freeze versions

--- a/package.json
+++ b/package.json
@@ -22,65 +22,62 @@
     "type": "git",
     "url": "git@github.com:wejs/we-plugin-core.git"
   },
-  "publishConfig": {
-    "registry": "http://registry.npmjs.org"
-  },
   "author": "Alberto Souza <contato@albertosouza.net>",
   "license": "MIT",
   "dependencies": {
-    "async": "^2.0.0-rc.4",
-    "bcryptjs": "^2.3.0",
-    "body-parser": "^1.15.1",
-    "compression": "^1.6.1",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.1",
-    "cors": "^2.7.1",
+    "async": "2.0.0-rc.5",
+    "bcryptjs": "2.3.0",
+    "body-parser": "1.15.1",
+    "compression": "1.6.2",
+    "connect-flash": "0.1.1",
+    "cookie-parser": "1.4.1",
+    "cors": "2.7.1",
     "debug": "~2.2.0",
-    "email-templates": "^2.3.0",
-    "express": "^4.13.4",
-    "express-session": "^1.13.0",
-    "fs-extra": "^0.30.0",
-    "handlebars": "^4.0.5",
-    "hbs": "^4.0.0",
-    "i18n": "^0.8.2",
+    "email-templates": "2.3.0",
+    "express": "4.13.4",
+    "express-session": "1.13.0",
+    "fs-extra": "0.30.0",
+    "handlebars": "4.0.5",
+    "hbs": "4.0.0",
+    "i18n": "0.8.2",
     "lodash": "4.12.0",
-    "mime": "^1.3.4",
-    "mkdirp": "^0.5.1",
-    "moment": "^2.13.0",
-    "morgan": "^1.7.0",
-    "multer": "^1.1.0",
-    "mv": "^2.1.1",
-    "node-uuid": "^1.4.7",
-    "nodemailer": "^2.4.1",
-    "nodemailer-smtp-transport": "^2.5.0",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "path-to-regexp": "^1.3.0",
-    "rc": "^1.1.6",
-    "recursive-readdir": "^2.0.0",
-    "request": "^2.72.0",
-    "require-all": "^2.0.0",
-    "rimraf": "^2.5.2",
-    "sanitize-html": "^1.11.4",
-    "sequelize": "^3.23.1",
+    "mime": "1.3.4",
+    "mkdirp": "0.5.1",
+    "moment": "2.13.0",
+    "morgan": "1.7.0",
+    "multer": "1.1.0",
+    "mv": "2.1.1",
+    "node-uuid": "1.4.7",
+    "nodemailer": "2.4.1",
+    "nodemailer-smtp-transport": "2.5.0",
+    "passport": "0.3.2",
+    "passport-local": "1.0.0",
+    "path-to-regexp": "1.3.0",
+    "rc": "1.1.6",
+    "recursive-readdir": "2.0.0",
+    "request": "2.72.0",
+    "require-all": "2.0.0",
+    "rimraf": "2.5.2",
+    "sanitize-html": "1.11.4",
+    "sequelize": "3.23.2",
     "serve-favicon": "~2.3.0",
-    "simple-hooks-callback": "^1.0.0",
-    "string": "^3.3.1",
-    "string.prototype.endswith": "^0.2.0",
-    "winston": "^2.2.0",
-    "we-core-acl": "^1.2.0"
+    "simple-hooks-callback": "1.0.0",
+    "string": "3.3.1",
+    "string.prototype.endswith": "0.2.0",
+    "winston": "2.2.0",
+    "we-core-acl": "1.2.0"
   },
   "devDependencies": {
-    "istanbul": "^0.4.3",
-    "mocha": "^2.4.5",
-    "sinon": "^1.17.4",
-    "supertest": "^1.2.0",
-    "we-plugin-form": "^0.3.34",
-    "we-plugin-menu": "^1.1.1",
-    "we-test-tools": "^0.3.14",
-    "we-theme-admin-default": "^1.0.1",
-    "we-theme-site-wejs": "^0.3.31",
+    "istanbul": "0.4.3",
+    "mocha": "2.4.5",
+    "sinon": "1.17.4",
+    "supertest": "1.2.0",
+    "we-plugin-form": "0.3.34",
+    "we-plugin-menu": "1.2.0",
+    "we-test-tools": "0.3.15",
+    "we-theme-admin-default": "1.0.1",
+    "we-theme-site-wejs": "0.3.31",
     "express-mysql-session": "1.0.0",
-    "mysql": "^2.10.2"
+    "mysql": "2.10.2"
   }
 }
