--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,25 @@
 language: node_js
 
 node_js:
-  - '4.1'
+  - v4
 
 services:
   - mysql
 
 addons:
   code_climate:
-    repo_token: 8d07bda4536211d4af2ef9dce3edda45dff1f892a2abdb062ab1c2ffd0a637f2
-  apt:
-    packages:
-    - graphicsmagick
+
 env:
   NODE_ENV: 'test'
+
+notifications:
+  email:
+    - alberto@wejs.org
 
 before_script:
   - mysql -e 'create database test;'
 
 after_success:
-  - npm install codeclimate-test-reporter
-  - NODE_ENV=test LOG_LV=info node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -u exports -R spec test/bootstrap.js test/**/*.test.js --timeout 20000
-  - codeclimate-test-reporter < coverage/lcov.info
-
-notifications:
-  email:
-    - alberto@wejs.org
+- npm install coveralls
+- npm run coverage
+- cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
