--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "we-core",
   "version": "1.3.1",
   "description": "We.js is a node.js framework for build real time applications, sites or blogs!",
-  "homepage": "https://github.com/wejs/we-core",
+  "homepage": "https://wejs.org",
   "main": "./lib/index.js",
   "scripts": {
     "test": "NODE_ENV=test LOG_LV=info ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js -b ",
