Add suport to load API search functions from files and close wejs/we#148

--- a/.jshintrc
+++ b/.jshintrc
@@ -6,7 +6,7 @@
 , "devel": true
 , "eqeqeq": false
 , "eqnull": true
-, "es5": false
+, "esversion": 6
 , "evil": false
 , "immed": false
 , "indent": 2
