--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "scripts": {
     "test": "NODE_ENV=test LOG_LV=info ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js -b ",
     "verbose-test": "NODE_ENV=test LOG_LV=verbose ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js -b ",
-    "coverage": "NODE_ENV=test LOG_LV=info node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -u exports -R spec test/bootstrap.js test/**/*.test.js",
-    "preversion": "npm test",
-    "postversion": "git push"
+    "coverage": "NODE_ENV=test LOG_LV=info node_modules/.bin/istanbul cover -x src node_modules/.bin/_mocha -- -u exports -R spec test/bootstrap.js test/**/*.test.js",
+    "preversion": "npm run compile && npm test",
+    "postversion": "git push",
+    "compile": "babel src --out-dir lib",
+    "cw": "babel src --out-dir lib -watch "
   },
   "keywords": [
     "we.js",
@@ -55,18 +57,29 @@
     "winston": "2.2.0"
   },
   "devDependencies": {
-    "rimraf": "2.5.2",
+    "babel-cli": "^6.9.0",
+    "babel-plugin-array-includes": "^2.0.3",
+    "babel-preset-es2015": "^6.9.0",
     "chance": "^1.0.3",
     "express-mysql-session": "1.0.0",
     "istanbul": "0.4.3",
     "mocha": "2.5.3",
     "mysql": "2.11.1",
     "ncp": "^2.0.0",
+    "rimraf": "2.5.2",
     "sinon": "1.17.4",
     "supertest": "1.2.0",
     "we-test-tools": "wejs/we-test-tools"
   },
   "engines": {
     "node": ">=4.0.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ],
+    "plugins": [
+      "array-includes"
+    ]
   }
 }
