--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "we.js",
     "wejs",
     "plugin",
+    "wejs-plugin",
     "API",
     "SPA"
   ],
@@ -61,7 +62,7 @@
     "babel-plugin-array-includes": "^2.0.3",
     "babel-preset-es2015": "^6.9.0",
     "chance": "^1.0.3",
-    "express-mysql-session": "1.1.0",
+    "express-mysql-session": "1.1.1",
     "istanbul": "0.4.3",
     "mocha": "2.5.3",
     "mysql": "2.11.1",
