add postgres modules for dev

--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "mocha": "2.5.3",
     "mysql": "2.11.1",
     "ncp": "^2.0.0",
+    "pg": "^6.0.2",
+    "pg-hstore": "^2.3.2",
     "rimraf": "2.5.3",
     "sinon": "1.17.4",
     "supertest": "1.2.0",
