--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "author": "Alberto Souza <contato@albertosouza.net>",
   "license": "MIT",
   "dependencies": {
-    "async": "2.0.0-rc.6",
+    "async": "2.0.1",
     "body-parser": "1.15.2",
     "compression": "1.6.2",
     "connect-flash": "0.1.1",
@@ -48,27 +48,27 @@
     "moment": "2.14.1",
     "morgan": "1.7.0",
     "node-uuid": "1.4.7",
-    "request": "2.72.0",
-    "sanitize-html": "1.12.0",
-    "sequelize": "3.23.4",
+    "request": "2.73.0",
+    "sanitize-html": "1.13.0",
+    "sequelize": "3.23.6",
     "serve-favicon": "~2.3.0",
     "simple-hooks-callback": "1.0.0",
     "string": "3.3.1",
     "winston": "2.2.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.10.1",
+    "babel-cli": "^6.11.4",
     "babel-plugin-array-includes": "^2.0.3",
     "babel-preset-es2015": "^6.9.0",
-    "chance": "^1.0.3",
+    "chance": "^1.0.4",
     "express-mysql-session": "1.1.1",
     "istanbul": "0.4.4",
     "mocha": "2.5.3",
     "mysql": "2.11.1",
     "ncp": "^2.0.0",
-    "pg": "^6.0.2",
+    "pg": "^6.0.3",
     "pg-hstore": "^2.3.2",
-    "rimraf": "2.5.3",
+    "rimraf": "2.5.4",
     "sinon": "1.17.4",
     "supertest": "1.2.0",
     "we-test-tools": "wejs/we-test-tools"
