--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.8.25",
   "description": "We.js is a node.js framework for build real time applications, sites or blogs!",
   "homepage": "https://wejs.org",
-  "main": "./lib/index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "NODE_ENV=test LOG_LV=info ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js -b ",
     "verbose-test": "NODE_ENV=test LOG_LV=verbose ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js -b ",
@@ -57,9 +57,6 @@
     "winston": "2.3.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-plugin-array-includes": "^2.0.3",
-    "babel-preset-es2015": "^6.18.0",
     "chance": "^1.0.4",
     "express-mysql-session": "1.2.0",
     "istanbul": "0.4.5",
@@ -74,19 +71,11 @@
     "we-test-tools": "wejs/we-test-tools"
   },
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=6.0.0"
   },
   "wejs": {
     "plugins": {
       "we-plugin-post": true
     }
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ],
-    "plugins": [
-      "array-includes"
-    ]
   }
 }
