fix npm package export

--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "verbose-test": "NODE_ENV=test LOG_LV=verbose ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js -b ",
     "coverage": "NODE_ENV=test LOG_LV=info node_modules/.bin/istanbul cover -x src node_modules/.bin/_mocha -- -u exports -R spec test/bootstrap.js test/**/*.test.js",
     "preversion": "npm test",
-    "postversion": "git push",
-    "compile": "babel src --out-dir lib",
-    "cw": "babel src --out-dir lib -watch "
+    "postversion": "git push"
   },
   "keywords": [
     "we.js",
@@ -23,7 +21,7 @@
   "repository": "wejs/we-plugin-core",
   "files": [
     "files",
-    "lib",
+    "src",
     "locales",
     "server",
     "install.js",
