add testes for plugin fast loader feature

--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
   },
   "wejs": {
     "plugins": {
-      "we-plugin-post": true
+      "we-plugin-post": true,
+      "we-plugin-fastload": true
     }
   }
 }
