--- a/package.json
+++ b/package.json
@@ -34,29 +34,29 @@
   "author": "Alberto Souza <contato@albertosouza.net>",
   "license": "MIT",
   "dependencies": {
-    "async": "2.1.5",
+    "async": "2.3.0",
     "body-parser": "1.17.1",
     "compression": "1.6.2",
     "connect-flash": "0.1.1",
     "cookie-parser": "1.4.3",
-    "cors": "2.8.1",
+    "cors": "2.8.3",
     "express": "4.15.2",
-    "express-session": "1.15.1",
+    "express-session": "1.15.2",
     "handlebars": "4.0.6",
     "i18n": "0.8.3",
     "lodash": "4.17.4",
     "mime": "1.3.4",
     "mkdirp": "0.5.1",
-    "moment": "2.17.1",
+    "moment": "2.18.1",
     "morgan": "1.8.1",
-    "node-uuid": "1.4.7",
     "pluralize": "^4.0.0",
     "request": "2.81.0",
     "sanitize-html": "1.14.1",
-    "sequelize": "3.30.2",
-    "serve-favicon": "~2.4.1",
+    "sequelize": "3.30.4",
+    "serve-favicon": "~2.4.2",
     "simple-hooks-callback": "1.0.0",
     "string": "3.3.3",
+    "uuid": "^3.0.1",
     "winston": "2.3.1"
   },
   "devDependencies": {
@@ -69,7 +69,7 @@
     "pg": "^6.1.4",
     "pg-hstore": "^2.3.2",
     "rimraf": "2.6.1",
-    "sinon": "1.17.7",
+    "sinon": "2.1.0",
     "supertest": "3.0.0",
     "we-test-tools": "wejs/we-test-tools"
   },
