--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "express-mysql-session": "1.2.1",
     "istanbul": "0.4.5",
     "mocha": "3.4.2",
-    "mysql": "2.13.0",
+    "mysql2": "^1.3.5",
     "ncp": "^2.0.0",
     "pg": "^6.2.4",
     "pg-hstore": "^2.3.2",
