--- a/package.json
+++ b/package.json
@@ -33,42 +33,42 @@
   "author": "Alberto Souza <contato@albertosouza.net>",
   "license": "MIT",
   "dependencies": {
-    "async": "2.5.0",
-    "body-parser": "1.17.2",
-    "compression": "1.7.0",
+    "async": "2.6.0",
+    "body-parser": "1.18.2",
+    "compression": "1.7.2",
     "connect-flash": "0.1.1",
     "cookie-parser": "1.4.3",
     "cors": "2.8.4",
-    "express": "4.15.3",
-    "express-session": "1.15.4",
-    "handlebars": "4.0.10",
+    "express": "4.16.2",
+    "express-session": "1.15.6",
+    "handlebars": "4.0.11",
     "i18n": "0.8.3",
-    "lodash": "4.17.4",
-    "mime": "1.3.6",
+    "lodash": "4.17.5",
+    "mime": "2.2.0",
     "mkdirp": "0.5.1",
-    "moment": "2.18.1",
-    "morgan": "1.8.2",
-    "pluralize": "^6.0.0",
-    "request": "2.81.0",
-    "sanitize-html": "1.16.1",
-    "sequelize": "3.30.4",
+    "moment": "2.20.1",
+    "morgan": "1.9.0",
+    "pluralize": "^7.0.0",
+    "request": "2.83.0",
+    "sanitize-html": "1.18.2",
+    "sequelize": "4.33.4",
     "serve-favicon": "~2.4.5",
     "simple-hooks-callback": "1.0.0",
     "string": "3.3.3",
-    "uuid": "^3.1.0",
-    "winston": "2.3.1"
+    "uuid": "^3.2.1",
+    "winston": "2.4.0"
   },
   "devDependencies": {
-    "chance": "^1.0.12",
-    "express-mysql-session": "1.2.1",
+    "chance": "^1.0.13",
+    "express-mysql-session": "1.2.3",
     "istanbul": "0.4.5",
-    "mocha": "3.4.2",
-    "mysql": "2.14.0",
+    "mocha": "5.0.1",
+    "mysql2": "^1.5.2",
     "ncp": "^2.0.0",
-    "pg": "^7.0.2",
+    "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
-    "rimraf": "2.6.1",
-    "sinon": "2.4.1",
+    "rimraf": "2.6.2",
+    "sinon": "4.4.0",
     "supertest": "3.0.0",
     "we-test-tools": "wejs/we-test-tools"
   },
