--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "we-core",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "description": "We.js is a node.js framework for build real time applications, sites or blogs!",
   "homepage": "https://wejs.org",
   "main": "./src/index.js",
@@ -58,11 +58,12 @@
     "winston": "^2.4.3"
   },
   "devDependencies": {
+    "express-mysql-session": "^2.1.0",
+    "mysql2": "^1.6.5",
     "chance": "^1.0.18",
     "connect-sqlite3": "^0.9.11",
     "istanbul": "0.4.5",
     "mocha": "6.1.4",
-    "mysql2": "^1.6.5",
     "ncp": "^2.0.0",
     "rimraf": "2.6.3",
     "sinon": "7.3.2",
