--- a/package.json
+++ b/package.json
@@ -59,16 +59,14 @@
   "devDependencies": {
     "chance": "^1.1.4",
     "connect-sqlite3": "^0.9.11",
-    "express-mysql-session": "^2.1.0",
     "mocha": "7.0.0",
-    "mysql2": "^2.1.0",
     "ncp": "^2.0.0",
     "nyc": "^15.0.0",
     "rimraf": "3.0.0",
     "sinon": "8.0.4",
     "sqlite3": "^4.1.1",
     "supertest": "4.0.2",
-    "we-test-tools": "github:wejs/we-test-tools"
+    "we-test-tools": "^1.0.0"
   },
   "engines": {
     "node": ">=8.0.0"
